Fix/displaying of event in calendar (#158)
* Make event markers only cover the top of the calendar tile.

* Added DateTile in calendar and styled it so the tiles fill the area and look like they did earlier.

* Enhance calendar tile styling to highlight today's date and improve event visibility

* Fix the background of the dropdown event descriptions.

* Refactor DateTile and mapTileContent for improved readability and consistency

* Fix CalendarClient to comply with prettiers style.

* Refactor dateTile on neighbouring months to not use generated class name.

--- a/src/components/Calendar/Calendar.scss
+++ b/src/components/Calendar/Calendar.scss
@@ -8,7 +8,7 @@
     }
   }
 
-  .react-calendar__month-view__days__day--neighboringMonth {
+  .react-calendar__month-view__days__day--neighboringMonth .date-tile {
     background-color: var(--calendar-neighboring-color);
   }
 
