--- a/src/components/Calendar/CalendarTiles.module.scss
+++ b/src/components/Calendar/CalendarTiles.module.scss
@@ -1,31 +1,50 @@
 .tile {
-  background-color: var(--calendar-current-color);
-  border-radius: 0.375rem;
-  border: solid 0.125rem var(--content-background-color);
+  border: none;
   aspect-ratio: 1 / 1;
   min-width: 0;
   overflow: visible !important;
   position: relative;
+  padding: 0.125rem;
+  background-color: transparent;
 }
 
-.tileEvent {
-  background-color: var(--calendar-event-color) !important;
+.dateTile {
+  border-radius: 0.1rem;
+  width: 100%;
+  height: 100%;
+  background-color: var(--calendar-current-color);
 }
 
-.event {
-  text-align: left;
-  background-color: var(--content-background-color);
+.tileEvent .dateTile {
+  border-top: solid var(--tile-event-border-height) var(--calendar-event-color);
+  border-bottom: solid var(--tile-event-border-height) transparent;
+}
+
+.today .dateTile {
+  background-color: var(--calendar-event-color);
+}
+
+.today.tileEvent .dateTile {
+  border-top-color: var(--calendar-event-today-color);
 }
 
 .dropdown {
   width: 100%;
   height: 100%;
-  text-align: center;
+  background-color: var(--content-background-color);
 }
 
 .date {
   height: 100%;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+}
+
+.event {
+  text-align: left;
+}
+
+.date-tile {
+  @extend .dateTile;
 }
